
Changelog
=========

4.3.1 (unreleased)
------------------

- Add and update french and german translations.
  [phgross]

- Treeportlet: extend caching parameters with current language code.
  [phgross]

- Implement meeting closing:

  - Added automatic generation of excerpts for every scheduled proposal.
  - Copy back the excerpt to the original proposal.
  - Create Proposalhistory entry when decided.
  - Add excerpt box to the ProposalOverview.
  - Update proposal states during closing a meeting.
  - Show decision in ProposalOverview.
  - Made Proposal's Agendaitem backref a One-To-One relation.

  [phgross]

- Made MeetingTransition's CSRF safe.
  [phgross]

- Made documents and mails addable in proposals.
  [phgross]

- Activate statefilter also in subdossiers listings.
  [phgross]

- Fixed french translations
  [phgross]

- Add sablon-template tab on template dossiers.
  [deiferni]

- No longer show sablon templates in navigation.
  [deiferni]

- Fix downloading protocol-previews in safari.
  [deiferni]

- Fix downloading sablong templates in template dossier.
  [deiferni]

- Optimize member and membership view:

  - Added Membership listing to MemberView.
  - Added Edit functionality for Memberships.
  - Added Remove functionality for Memberships.
  - Order Memberships on date_from date by default.
  - Add memberhip_id column to membership table.

  [phgross]

- Extend meeting type views with corresponding watermark icon.
  [phgross]

- Extend meeting type links with corresponding icon.
  [phgross]

- Make sablon templates configurable on commitee-container. The following
  templates are available: Pre-protocol, protocol and excerpt.
  [deiferni]

- Made different SchemaMigration Upgradesteps more robust.
  [phgross]

- Customize CSRF confirmation page and add German translations.
  [lgraf]

- Added translations for the SearchBoxViewlet placeholder.
  [phgross]

- CSRF: always allow object annotations to be written.
  [jone, deiferni]
